--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -377,3 +377,51 @@ body.sb-l-o #topbar.affix,
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
     background-color: #181818;
 }
+
+
+
+
+/*icons */
+
+@font-face {
+    font-family: 'icomoon';
+    src:    url('/assets/fonts/icomoon/icomoon.eot?obhx1x');
+    src:    url('/assets/fonts/icomoon/icomoon.eot?obhx1x#iefix') format('embedded-opentype'),
+        url('/assets/fonts/icomoon/icomoon.ttf?obhx1x') format('truetype'),
+        url('/assets/fonts/icomoon/icomoon.woff?obhx1x') format('woff'),
+        url('/assets/fonts/icomoon/icomoon.svg?obhx1x#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-campaigns_icon:before {
+    content: "\e900";
+}
+.icon-campaigns_icon2:before {
+    content: "\e901";
+}
+.icon-campaigns_icon_black:before {
+    content: "\e902";
+}
+
+.icon-campaigns_icon2 {
+    position: relative;
+    top: 1px;
+}
+
+/**/
