--- a/public/assets/skin/overrides/domains_overrides.css
+++ b/public/assets/skin/overrides/domains_overrides.css
@@ -39,6 +39,7 @@
 
 
 .lander-on-campaign-row td {
-	background-color: #666;
-	color: #fff;
+	border-top: 1px solid #999eb3 !important;
+	background-color: #abc3ce;
+	color: #444;
 }
