--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -465,6 +465,10 @@ body.sb-l-o #topbar.affix,
     float: right;
 }
 
+.no-top-border: {
+    border-top: none !important;
+}
 
-
-
+.active_campaigns_region {
+    font-size: 14px;
+}
