--- a/public/assets/skin/overrides/domains_overrides.css
+++ b/public/assets/skin/overrides/domains_overrides.css
@@ -49,29 +49,49 @@
 	min-width: 170px;
 }
 
-.domains-lander-links .landers-select-container .select2-container--default .select2-selection--single .select2-selection__rendered {
+tr.success .domains-lander-links .landers-select-container .select2-container--default .select2-selection--single .select2-selection__rendered {
 	color: #3f9532 !important;
 }
 
-.domains-lander-links .landers-select-container {
+tr.success .domains-lander-links .landers-select-container {
 	display: inline;
 	float: left;
 }
 
-.domains-lander-links .select2-container--default .select2-selection--single .select2-selection__rendered {
+tr.success .domains-lander-links .select2-container--default .select2-selection--single .select2-selection__rendered {
 	color: #3f9532 !important;
 }
 
-.domains-lander-links .select2-container--default .select2-selection--single .select2-selection__arrow b {
+tr.success .domains-lander-links .select2-container--default .select2-selection--single .select2-selection__arrow b {
 	border-color: #3f9532 transparent transparent transparent;
 }
 
-.domains-lander-links .landers-select-container .select2-selection {
+tr.success .domains-lander-links .landers-select-container .select2-selection {
 	outline: none;
 	border-color: #3f9532 !important;
 }
 
+tr.warning .domains-lander-links .landers-select-container .select2-container--default .select2-selection--single .select2-selection__rendered {
+	color: #c88a0a !important;
+}
 
+tr.warning .domains-lander-links .landers-select-container {
+	display: inline;
+	float: left;
+}
+
+tr.warning .domains-lander-links .select2-container--default .select2-selection--single .select2-selection__rendered {
+	color: #c88a0a !important;
+}
+
+tr.warning .domains-lander-links .select2-container--default .select2-selection--single .select2-selection__arrow b {
+	border-color: #c88a0a transparent transparent transparent;
+}
+
+tr.warning .domains-lander-links .landers-select-container .select2-selection {
+	outline: none;
+	border-color: #c88a0a !important;
+}
 
 
 
