downloads for optimized/orignal working with message/disable, regionized the preview and pagespeed areas

--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -472,3 +472,8 @@ body.sb-l-o #topbar.affix,
 .active_campaigns_region {
     font-size: 14px;
 }
+
+
+.menu-buttons-region {
+    background-color: #fff;
+}
