campaigns use base classes, change deployed domains to domainlist, add campaign working, disable png optimization

--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -273,7 +273,7 @@ tr.alert .domain-endpoint-select {
     margin: -10px 5px;
 }
 
-input.lander-search {
+input.list-search {
     padding: 15px !important;
 }
 
