--- a/public/assets/skin/overrides/domains_overrides.css
+++ b/public/assets/skin/overrides/domains_overrides.css
@@ -33,7 +33,7 @@
 	text-decoration: none;
 }
 
-.deployed-domains-region, .deployed-landers-region {
+.domains-region, .deployed-landers-region {
 	font-size: 14px;
 }
 
