removed all db logs added callbacks, fixes for campaigns, added deployed domains to deployed landers

--- a/public/assets/skin/overrides/domains_overrides.css
+++ b/public/assets/skin/overrides/domains_overrides.css
@@ -33,7 +33,7 @@
 	text-decoration: none;
 }
 
-.domains-region, .deployed-landers-region {
+.domains-region, .deployed-domains-region, .deployed-landers-region {
 	font-size: 14px;
 }
 
