--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -1,15 +1,11 @@
-
 @import url('login_overrides.css');
 @import url('landers_overrides.css');
 @import url('domains_overrides.css');
 @import url('groups_overrides.css');
 @import url('active_snippets_overrides.css');
-
-
 body {
     min-height: 300px;
 }
-
 
 #topbar {
     min-height: 41px;
@@ -473,7 +469,6 @@ body.sb-l-o #topbar.affix,
     font-size: 14px;
 }
 
-
 .menu-buttons-region {
     background-color: #fff;
 }
@@ -485,7 +480,8 @@ body.sb-l-o #topbar.affix,
 }
 
 .deployed-row-td {
-    font-size: 14px; line-height: 28px !important;
+    font-size: 14px;
+    line-height: 28px !important;
 }
 
 .section-divider span {
@@ -495,7 +491,9 @@ body.sb-l-o #topbar.affix,
 #rip-advanced-settings {
     display: none;
 }
-#toggle-advanced-rip-settings:hover,#toggle-advanced-rip-settings:focus {
+
+#toggle-advanced-rip-settings:hover,
+#toggle-advanced-rip-settings:focus {
     text-decoration: none !important;
 }
 
@@ -506,8 +504,17 @@ body.sb-l-o #topbar.affix,
     line-height: normal;
     font-weight: 600;
     outline: none;
+    color: rgb(102, 102, 102);
+}
+
+.editable-lander-name[readonly] {
+    cursor: pointer;
 }
 
 .fw500 {
     font-weight: 500 !important;
+}
+
+.list-row-item {
+    cursor: pointer;
 }
