--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -527,6 +527,11 @@ div.list-row-item:focus input {
     color: #222;
     text-decoration: none;
 }
- {
 
+
+.admin-form .dropdown-menu label:hover {
+    background-color: #f5f5f5 !important;
+}
+.page-size-dropdown{
+    width: 185px;
 }
