cancel job gui, edit buttons black, on init show disable cusor image and on click notes tab dont active state

--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -422,8 +422,9 @@ tr.warning input[type=select] {
     margin-left: 60px;
 }
 
-.disabled-link {
-    cursor: not-allowed;
+.disabled-link,
+.disabled-link input {
+    cursor: not-allowed !important;
 }
 
 .inactive-link {
