refactor topbarview, filter domains working

--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -330,7 +330,7 @@ input.list-search {
 }
 
 .topbar-left .right-stats div {
-    display: inline;
+    display: inline-block;
     margin-right: 10px;
 }
 
