report rip/add lander broken feature logs and messages user

--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -646,5 +646,14 @@ a.download-optimized-lander:hover {
     text-decoration: none;
 }
 
+#modal-region p {
+    font-size: 14px !important;
+}
 
+.report-broken-link {
+    cursor: pointer;
+}
 
+.report-broken-link.reported {
+    cursor: default;
+}
