fixed right sidebar gui buttons for landers, updated typo for fixed intercom message add lander

--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -135,6 +135,11 @@ span.fancytree-icon-folder {
     display: block;
 }
 
+
+a.delete-lander-button:hover {
+    text-decoration: none;    
+}
+
 .snippets-container span.fancytree-node {
     padding: 5px 0 0px 0;
 }
