--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -89,7 +89,7 @@
     bottom: 0;
     top: 0;
     right: 0;
-    min-width: 122px;
+    width: 140px;
     margin-right: 396px;
 }
 
@@ -337,6 +337,11 @@ input.list-search {
 .topbar-left .right-stats div {
     display: inline-block;
     margin-right: 10px;
+}
+
+.topbar-left .right-stats div.total {
+    display: inline-block;
+    margin-right: 0px;
 }
 
 tr.success a {
