--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -9,7 +9,7 @@ body {
 
 #topbar {
     min-height: 41px;
-    padding: 5px 21px;
+    padding: 5px 32px;
 }
 
 #nestable-contextual {
@@ -73,7 +73,7 @@ body.sb-l-o #topbar.affix,
 }
 
 #first-topbar.alt {
-    padding: 17px 22px !important;
+    padding: 17px 35px !important;
     background: #e7e7e7;
     border-bottom: 1px solid #ddd;
 }
@@ -661,4 +661,8 @@ a.download-optimized-lander:hover {
 .report-broken-link.reported {
     color: inherit;
     cursor: default;
+}
+
+.navbar-branding .navbar-brand {
+    padding-left: 32px;
 }
